--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -212,6 +212,7 @@ $zindex-navbar-fixed: 1030 !default;
 $zindex-navbar-sticky: 1030 !default;
 
 $navbar-nav-padding: 0 2.5rem;
+$navbar-nav-padding-md: 0 2rem 0 0rem;
 
 $navbar-brand-padding-y: .25rem;
 
